<resources>
    <string name="app_name">Project+</string>
    <string name="Save">Save</string>
    <string name="Next">Next</string>
    <string name="other">Other</string>
    <string name="start">Start</string>
    <string name="anim">Animation</string>
    <string name="showcamera">Show Camera</string>
    <string name="username">username</string>
    <string name="age">Age</string>
    <string name="show">Show</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="usernameerror">Please enter your username</string>
    <string name="ageerror">Please enter your age</string>
    <string name="correct">Fields are filled correct.</string>
    <string name="success_message">Succesfully Saved.</string>
    <string name="user_exists">Some error ocured!</string>

</resources>