<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:id="@+id/mainLayout"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/users"
            android:textColor="@android:color/black"
            android:text=""
            android:textSize="16sp"
            ></TextView>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10px"
            android:layout_below="@+id/users"
            android:id="@+id/show"
            android:text="@string/show">
        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10px"
            android:layout_below="@+id/show"
            android:id="@+id/back"
            android:text="@string/back">
        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10px"
            android:layout_below="@+id/back"
            android:id="@+id/delete"
            android:text="@string/delete">
        </Button>

    </LinearLayout>
</ScrollView>